fix : border alignment fix

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -1,6 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* add following lines */
+@layer base {
+  img {
+    @apply inline-block;
+  }
+}
 
 .photo {
   position: absolute;
